--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6285,7 +6285,20 @@ button.close {
     display: none !important;
   }
 }
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
   background-color: #555555;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #f5f5f5;
 }
 /*# sourceMappingURL=layout.css.map */
