--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -1,5 +1,20 @@
 ﻿@import "../bootstrap.less";
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     background-color: @gray;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
 }
