corrected mapping errors

--- a/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
@@ -1,8 +1,8 @@
 ﻿<div id="page-home" class="page-content container">
 
     <ol class="breadcrumb row">
-        <li><a href="/#/">Home</a></li>
-        <li><a href="/#/clinicians/{{data.id}}/edit">Edit Clinician</a></li>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/clinicians/{{data.id}}/edit">Edit Clinician</a></li>
     </ol>
     
     <form name="form" class="form">
