--- a/src/Antix.EASI.Web/client/clinicians/create/clinicians-create.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/create/clinicians-create.cshtml
@@ -1,8 +1,8 @@
 ﻿<div id="page-home" class="page-content container">
 
     <ol class="breadcrumb row">
-        <li><a href="/#/">Home</a></li>
-        <li><a href="/#/clinicians/create">Create Clinician</a></li>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/clinicians/create">Create Clinician</a></li>
     </ol>
 
     <form name="form" class="form">
