--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="page-home" class="page-content container">
 
     <ol class="breadcrumb row">
-        <li><a href="/#/">Home</a></li>
+        <li><a href="#/">Home</a></li>
     </ol>
     
 
