--- a/src/Antix.EASI.Web/client/clinicians/select/clinicians-select.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/select/clinicians-select.cshtml
@@ -7,7 +7,7 @@
         <input class="form-control" placeholder="(clinician)"
                ng-model="clinician"
                ng-model-options="{debounce:500}"
-               typeahead="i as i.name for i in clinicians | filter:$viewValue | limitTo:8" />
+               typeahead="i as i.name for i in get($viewValue) | filter:$viewValue | limitTo:8" />
         <div class="input-group-btn">
             <a href="#/clinicians/{{clinician.id}}/edit" class="btn btn-default"
                ng-disabled="!clinician">
