--- a/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
@@ -2,7 +2,8 @@
 
     <ol class="breadcrumb row">
         <li><a href="#/">Home</a></li>
-        <li><a href="#/clinicians/{{data.id}}/edit">Edit Clinician</a></li>
+        <li><a href="#/clinicians/">Clinicians</a></li>
+        <li><a href="#/clinicians/{{data.id}}/edit">Edit</a></li>
     </ol>
     
     <form name="form" class="form">
