--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6301,4 +6301,8 @@ body {
   height: 50px;
   background-color: #f5f5f5;
 }
+.page-content {
+  background-color: #eee;
+  min-height: 300px;
+}
 /*# sourceMappingURL=layout.css.map */
