--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -18,3 +18,8 @@ body {
     height: 50px;
     background-color: #f5f5f5;
 }
+
+.page-content{
+    background-color:#eee;
+    min-height:300px;
+}
