set pages to content

--- a/src/Antix.EASI.Web/client/clinicians/create/clinicians-create.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/create/clinicians-create.cshtml
@@ -2,7 +2,8 @@
 
     <ol class="breadcrumb row">
         <li><a href="#/">Home</a></li>
-        <li><a href="#/clinicians/create">Create Clinician</a></li>
+        <li><a href="#/clinicians/">Clinicians</a></li>
+        <li><a href="#/clinicians/create">Create</a></li>
     </ol>
 
     <form name="form" class="form">
