link to clinicians from home page

--- a/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
@@ -6,7 +6,7 @@
         <li><a href="#/clinicians/{{data.id}}/edit">Edit</a></li>
     </ol>
     
-    <form name="form" class="form">
+    <form name="form">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">
