--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -4,5 +4,8 @@
         <li><a href="#/">Home</a></li>
     </ol>
     
-
+    <p><a href="#/clinicians/">
+           <span class="fa fa-user-md"></span>
+           Clinicians
+       </a></p>
 </div>
