--- a/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
+++ b/src/Antix.EASI.Web/client/clinicians/edit/clinicians-edit.cshtml
@@ -7,7 +7,7 @@
     </ol>
     
     <form name="form">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">
                     <span class="fa fa-user-md"></span>
@@ -42,10 +42,6 @@
             <div class="panel-footer clearfix">
                 <div class="form-group">
                     <span class="pull-right">
-                        <a class="btn btn-default"
-                           ng-click="cancel()">
-                            Cancel
-                        </a>
                         <button class="btn btn-primary"
                                 ng-click="update()">
                             Update
