--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -19,7 +19,11 @@ body {
     background-color: #f5f5f5;
 }
 
-.page-content{
-    background-color:#eee;
-    min-height:300px;
+.page-content {
+    background-color: #eee;
+    min-height: 300px;
+
+    > form > .panel {
+        margin: -20px -15px 0;
+    }
 }
