edit form - removed panel

--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -20,7 +20,7 @@ body {
 }
 
 .page-content {
-    background-color: #eee;
+    background-color: #f9f9f9;
     min-height: 300px;
 
     > form > .panel {
