--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6302,7 +6302,7 @@ body {
   background-color: #f5f5f5;
 }
 .page-content {
-  background-color: #eee;
+  background-color: #f9f9f9;
   min-height: 300px;
 }
 .page-content > form > .panel {
