search to layout

--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6290,7 +6290,7 @@ html {
   min-height: 100%;
 }
 body {
-  background-color: #555555;
+  background-color: #eeeeee;
   margin-top: 60px;
   margin-bottom: 60px;
 }
