--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    background-color: @gray;
+    background-color: @gray-lighter;
     margin-top: 60px;
     margin-bottom: 60px;
 }
