--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="navbar-collapse collapse" role="navigation"
                  data-ng-class="{in:collapse}">
-                <clinicians-select clinician="it"></clinicians-select>
+                <search-box></search-box>
             </div>
         </div>
     </div>
