--- a/src/Antix.EASI.Web/Scripts/antix/status/antix-status.css
+++ b/src/Antix.EASI.Web/Scripts/antix/status/antix-status.css
@@ -1,8 +1,8 @@
 ﻿.a-status {
   position: fixed;
-  z-index: 10;
+  z-index: 1040;
   max-width: 80%;
-  bottom: 0;
+  top: 47px;
   right: 10%;
   padding-right: 35px;
 }
@@ -17,12 +17,12 @@
 }
 .a-status.ng-hide-add.ng-hide-add-active,
 .a-status.ng-hide-remove {
-  -webkit-animation: fadeOutDown 0.25s both ease-in;
-  animation: fadeOutDown 0.25s both ease-in;
+  -webkit-animation: fadeOutUp 0.25s both ease-in;
+  animation: fadeOutUp 0.25s both ease-in;
 }
 .a-status.ng-hide-add,
 .a-status.ng-hide-remove.ng-hide-remove-active {
-  -webkit-animation: fadeInUp 0.5s both ease-in;
-  animation: fadeInUp 0.5s both ease-in;
+  -webkit-animation: fadeInDown 0.5s both ease-in;
+  animation: fadeInDown 0.5s both ease-in;
 }
 /*# sourceMappingURL=antix-status.css.map */
