--- a/src/Antix.EASI.Web/Scripts/antix/status/antix-status.less
+++ b/src/Antix.EASI.Web/Scripts/antix/status/antix-status.less
@@ -1,11 +1,11 @@
 ﻿
 .a-status {
     position: fixed;
-    z-index: 10;
+    z-index: 1040;
 
     max-width:80%;
 
-    bottom: 0; right: 10%;
+    top: 47px; right: 10%;
     padding-right: 35px;
 }
 
@@ -22,13 +22,13 @@
 
 .a-status.ng-hide-add.ng-hide-add-active,
 .a-status.ng-hide-remove {
-    -webkit-animation: fadeOutDown .25s both ease-in;
-    animation: fadeOutDown .25s both ease-in;
+    -webkit-animation: fadeOutUp .25s both ease-in;
+    animation: fadeOutUp .25s both ease-in;
 }
 
 .a-status.ng-hide-add,
 .a-status.ng-hide-remove.ng-hide-remove-active {
-    -webkit-animation: fadeInUp .5s both ease-in;
-    animation: fadeInUp .5s both ease-in;
+    -webkit-animation: fadeInDown .5s both ease-in;
+    animation: fadeInDown .5s both ease-in;
 }
 
