--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -35,6 +35,32 @@
             </div>
             <div class="navbar-collapse collapse" role="navigation"
                  data-ng-class="{in:collapse}">
+                <div class="navbar-btn navbar-right">
+                    <div class="btn-group" dropdown>
+                        <a type="button" class="btn btn-primary"
+                           href="/#/clinicians/create">
+                            <span class="fa fa-plus"></span>
+                            <span class="fa fa-user-md"></span>
+                        </a>
+                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#">
+                                    <span class="fa fa-user-md"></span>
+                                    Create Clinician
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="fa fa-user"></span>
+                                    Create Patient
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <search-box></search-box>
             </div>
         </div>
@@ -43,7 +69,7 @@
     <div class="page-body view-container">
         <div ui-view autoscroll="false" class="view-frame"></div>
     </div>
-    
+
     <footer class="footer">
         <div class="container">
             <div class="navbar">
