--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -38,7 +38,7 @@
                 <div class="navbar-btn navbar-right">
                     <div class="btn-group" dropdown>
                         <a type="button" class="btn btn-primary"
-                           href="/#/clinicians/create">
+                           href="#/clinicians/create">
                             <span class="fa fa-plus"></span>
                             <span class="fa fa-user-md"></span>
                         </a>
