added patients, copy of examiners

--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -4,8 +4,16 @@
         <li><a href="#/">Home</a></li>
     </ol>
     
-    <p><a href="#/examiners/">
-           <span class="fa fa-user-md"></span>
-           Examiners
-       </a></p>
+    <p>
+        <a href="#/examiners/">
+            <span class="fa fa-user-md"></span>
+            Examiners
+        </a>
+    </p>
+    <p>
+        <a href="#/patients/">
+            <span class="fa fa-user"></span>
+            Patients
+        </a>
+    </p>
 </div>
