--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -47,13 +47,13 @@
                         </button>
                         <ul class="dropdown-menu" role="menu">
                             <li>
-                                <a href="#">
+                                <a href="#/examiners/create">
                                     <span class="fa fa-user-md"></span>
                                     Create Examiner
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#/patients/create">
                                     <span class="fa fa-user"></span>
                                     Create Patient
                                 </a>
