create button not primary action

--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -37,12 +37,12 @@
                  data-ng-class="{in:collapse}">
                 <div class="navbar-btn navbar-right">
                     <div class="btn-group" dropdown>
-                        <a type="button" class="btn btn-primary"
+                        <a type="button" class="btn btn-default"
                            href="#/examiners/create">
                             <span class="fa fa-plus"></span>
                             <span class="fa fa-user-md"></span>
                         </a>
-                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
+                        <button type="button" class="btn btn-default dropdown-toggle" dropdown-toggle>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
