--- a/src/Antix.EASI.Web/Content/site/form.css
+++ b/src/Antix.EASI.Web/Content/site/form.css
@@ -75,10 +75,42 @@
   max-width: 400px;
   margin: 0 auto;
 }
-.errors {
-  color: #a94442;
-}
 .ng-submitted .ng-invalid {
   border-color: #ebccd1;
+}
+.form-group {
+  position: relative;
+}
+.form-group .errors {
+  position: absolute;
+  left: 0;
+  top: -1px;
+  margin-top: -2px;
+  padding: 3px 20px 4px;
+  color: #f2dede;
+  background-color: #a94442;
+  xbox-shadow: 2px 2px 12px rgba(0, 0, 0, 0.4);
+  border-radius: 2px 2px 0 0;
+}
+.form-group .errors:before {
+  content: "\00d7";
+  display: block;
+  /* reduce the damage in FF3.0 */
+  position: absolute;
+  margin-top: 1px;
+  left: 6px;
+  font-weight: 900;
+}
+.form-group .errors:after {
+  content: "";
+  display: block;
+  /* reduce the damage in FF3.0 */
+  position: absolute;
+  bottom: -3px;
+  left: 8px;
+  width: 0;
+  border-width: 3px 3px 0;
+  border-style: solid;
+  border-color: #a94442 transparent;
 }
 /*# sourceMappingURL=form.css.map */
