add examinations to layout

--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -4,16 +4,24 @@
         <li><a href="#/">Home</a></li>
     </ol>
     
-    <p>
-        <a href="#/examiners/">
-            <span class="fa fa-user-md"></span>
-            Examiners
-        </a>
-    </p>
-    <p>
-        <a href="#/patients/">
-            <span class="fa fa-user"></span>
-            Patients
-        </a>
-    </p>
+    <ul>
+        <li>
+            <a href="#/examinations/">
+                <span class="fa fa-clipboard"></span>
+                Examinations
+            </a>
+        </li>
+        <li>
+            <a href="#/examiners/">
+                <span class="fa fa-user-md"></span>
+                Examiners
+            </a>
+        </li>
+        <li>
+            <a href="#/patients/">
+                <span class="fa fa-user"></span>
+                Patients
+            </a>
+        </li>
+    </ul>
 </div>
