--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -38,24 +38,30 @@
                 <div class="navbar-btn navbar-right">
                     <div class="btn-group" dropdown>
                         <a type="button" class="btn btn-default"
-                           href="#/examiners/create">
+                           href="#/examinations/create">
                             <span class="fa fa-plus"></span>
-                            <span class="fa fa-user-md"></span>
+                            <span class="fa fa-clipboard"></span>
                         </a>
                         <button type="button" class="btn btn-default dropdown-toggle" dropdown-toggle>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
                             <li>
+                                <a href="#/examinations/create">
+                                    <span class="fa fa-clipboard"></span>
+                                    New Examination
+                                </a>
+                            </li>
+                            <li>
                                 <a href="#/examiners/create">
                                     <span class="fa fa-user-md"></span>
-                                    Create Examiner
+                                    New Examiner
                                 </a>
                             </li>
                             <li>
                                 <a href="#/patients/create">
                                     <span class="fa fa-user"></span>
-                                    Create Patient
+                                    New Patient
                                 </a>
                             </li>
                         </ul>
