--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
@@ -8,7 +8,7 @@
 
     <form name="form">
         <h3>
-            <span class="fa fa-user-md"></span>
+            <span class="fa fa-clipboard"></span>
             Edit Examination
         </h3>
         <hr />
