--- a/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <h4 class="panel-title">
-                <span class="fa fa-user-md"></span>
+                <span class="fa fa-clipboard"></span>
                 {{item | examinationTitle}}
             </h4>
         </div> 
