nicer list on home page - likely to go, but for now

--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -4,20 +4,20 @@
         <li><a href="#/">Home</a></li>
     </ol>
     
-    <ul>
-        <li>
+    <ul class="list-group">
+        <li class="list-group-item">
             <a href="#/examinations/">
                 <span class="fa fa-clipboard"></span>
                 Examinations
             </a>
         </li>
-        <li>
+        <li class="list-group-item">
             <a href="#/examiners/">
                 <span class="fa fa-user-md"></span>
                 Examiners
             </a>
         </li>
-        <li>
+        <li class="list-group-item">
             <a href="#/patients/">
                 <span class="fa fa-user"></span>
                 Patients
