--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -3,25 +3,19 @@
     <ol class="breadcrumb row">
         <li><a href="#/">Home</a></li>
     </ol>
-    
-    <ul class="list-group">
-        <li class="list-group-item">
-            <a href="#/examinations/">
-                <span class="fa fa-clipboard"></span>
-                Examinations
-            </a>
-        </li>
-        <li class="list-group-item">
-            <a href="#/examiners/">
-                <span class="fa fa-user-md"></span>
-                Examiners
-            </a>
-        </li>
-        <li class="list-group-item">
-            <a href="#/patients/">
-                <span class="fa fa-user"></span>
-                Patients
-            </a>
-        </li>
-    </ul>
+
+    <div class="list-group">
+        <a href="#/examinations/" class="list-group-item">
+            <span class="fa fa-clipboard"></span>
+            Examinations
+        </a>
+        <a href="#/examiners/" class="list-group-item">
+            <span class="fa fa-user-md"></span>
+            Examiners
+        </a>
+        <a href="#/patients/" class="list-group-item">
+            <span class="fa fa-user"></span>
+            Patients
+        </a>
+    </div>
 </div>
