--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -48,20 +48,23 @@
                         <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="#/examinations/create">
+                                    <span class="fa fa-plus"></span>
                                     <span class="fa fa-clipboard"></span>
-                                    New Examination
+                                    Add Examination
                                 </a>
                             </li>
                             <li>
                                 <a href="#/examiners/create">
+                                    <span class="fa fa-plus"></span>
                                     <span class="fa fa-user-md"></span>
-                                    New Examiner
+                                    Add Examiner
                                 </a>
                             </li>
                             <li>
                                 <a href="#/patients/create">
+                                    <span class="fa fa-plus"></span>
                                     <span class="fa fa-user"></span>
-                                    New Patient
+                                    Add Patient
                                 </a>
                             </li>
                         </ul>
