--- a/src/Antix.EASI.Web/client/examiners/select/examiners-select.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/select/examiners-select.cshtml
@@ -1,16 +1,13 @@
-﻿<form name="examinerSelectForm" class="navbar-form navbar-right">
-    <div class="input-group"
-         ng-disabled="!examiners">
-        <div class="input-group-addon">
-            <span class="fa fa-user-md"></span>
-        </div>
-        <input class="form-control" placeholder="(examiner)"
-               ng-model="examiner"
+﻿<div>
+    <div class="input-group">
+        <input class="form-control" placeholder="(search)"
+               ng-model="examinerId"
                ng-model-options="{debounce:500}"
-               typeahead="i as i.name for i in get($viewValue) | filter:$viewValue | limitTo:8" />
+               typeahead="i.id as i.name for i in get($viewValue) | filter:$viewValue | limitTo:8"
+               typeahead-input-formatter="format($model)" />
         <div class="input-group-btn">
-            <a href="#/examiners/{{examiner.id}}/edit" class="btn btn-default"
-               ng-disabled="!examiner">
+            <a href="#/examiners/{{examinerId}}/edit" class="btn btn-default"
+               ng-disabled="!examinerId">
                 <span class="fa fa-pencil"></span>
             </a>
             <a href="#/examiners/create" class="btn btn-default">
@@ -18,4 +15,4 @@
             </a>
         </div>
     </div>
-</form>
+</div>
