--- a/src/Antix.EASI.Web/client/patients/select/patients-select.cshtml
+++ b/src/Antix.EASI.Web/client/patients/select/patients-select.cshtml
@@ -1,16 +1,13 @@
-﻿<form name="patientSelectForm" class="navbar-form navbar-right">
-    <div class="input-group"
-         ng-disabled="!patients">
-        <div class="input-group-addon">
-            <span class="fa fa-user-md"></span>
-        </div>
-        <input class="form-control" placeholder="(patient)"
-               ng-model="patient"
+﻿<div>
+    <div class="input-group">
+        <input class="form-control" placeholder="(search)"
+               ng-model="patientId"
                ng-model-options="{debounce:500}"
-               typeahead="i as i.name for i in get($viewValue) | filter:$viewValue | limitTo:8" />
+               typeahead="i.id as i.name for i in get($viewValue) | filter:$viewValue | limitTo:8"
+               typeahead-input-formatter="format($model)" />
         <div class="input-group-btn">
-            <a href="#/patients/{{patient.id}}/edit" class="btn btn-default"
-               ng-disabled="!patient">
+            <a href="#/patients/{{patientId}}/edit" class="btn btn-default"
+               ng-disabled="!patientId">
                 <span class="fa fa-pencil"></span>
             </a>
             <a href="#/patients/create" class="btn btn-default">
@@ -18,4 +15,4 @@
             </a>
         </div>
     </div>
-</form>
+</div>
