create patients and examiners as popups

--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -54,14 +54,14 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#/examiners/create">
+                                <a href create-examiner>
                                     <span class="fa fa-plus"></span>
                                     <span class="fa fa-user-md"></span>
                                     Add Examiner
                                 </a>
                             </li>
                             <li>
-                                <a href="#/patients/create">
+                                <a href create-patient>
                                     <span class="fa fa-plus"></span>
                                     <span class="fa fa-user"></span>
                                     Add Patient
