--- a/src/Antix.EASI.Web/client/examiners/select/examiners-select.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/select/examiners-select.cshtml
@@ -10,9 +10,10 @@
                ng-disabled="!examinerId">
                 <span class="fa fa-pencil"></span>
             </a>
-            <a href="#/examiners/create" class="btn btn-default">
+            <button create-examiner
+                    class="btn btn-default">
                 <span class="fa fa-plus"></span>
-            </a>
+            </button>
         </div>
     </div>
 </div>
