--- a/src/Antix.EASI.Web/client/patients/select/patients-select.cshtml
+++ b/src/Antix.EASI.Web/client/patients/select/patients-select.cshtml
@@ -10,9 +10,10 @@
                ng-disabled="!patientId">
                 <span class="fa fa-pencil"></span>
             </a>
-            <a href="#/patients/create" class="btn btn-default">
+            <button create-patient
+                    class="btn btn-default">
                 <span class="fa fa-plus"></span>
-            </a>
+            </button>
         </div>
     </div>
 </div>
