examination creation validation

--- a/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
@@ -8,7 +8,7 @@
     <div class="form-group">
         <label class="control-label">Name</label>
         <input class="form-control"
-               name="name"
+               name="name" type="text" autocapitalize="on"
                ng-model="data.name" />
 
         <div class="errors"
