--- a/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
@@ -11,9 +11,16 @@
                 <span class="fa fa-clipboard"></span>
                 {{item | examinationTitle}}
             </h4>
-        </div> 
+        </div>
         <div class="panel-body">
-            
+            <div class="row">
+                <label class="col-sm-4">Patient</label>
+                <span class="col-sm-8">{{item.patient | patientName}}</span>
+            </div>
+            <div class="row">
+                <label class="col-sm-4">Examiner</label>
+                <span class="col-sm-8">{{item.examiner | examinerName}}</span>
+            </div>
         </div>
     </div>
 
