--- a/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
+++ b/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
@@ -43,7 +43,7 @@
                     Update
                 </button>
             </span>
-            <button class="btn btn-warning"
+            <button class="btn btn-warning" type="button"
                     a-confirm="delete()"
                     a-confirm-ok="Delete"
                     a-confirm-message="Delete the patient '{{data.person.name}}'?">
