updated status display

--- a/src/Antix.EASI.Web/Scripts/antix/status/antix-status.cshtml
+++ b/src/Antix.EASI.Web/Scripts/antix/status/antix-status.cshtml
@@ -1,4 +1,4 @@
-﻿<div ng-show="show" class="a-status alert {{status?'alert-'+status.type:''}}">
+﻿<div ng-show="show" class="a-status {{status?'a-status-'+status.type:''}}">
     <button type="button" class="close" ng-click="hide()">
         <span>&times;</span>
     </button>
