--- a/src/Antix.EASI.Web/Scripts/antix/status/antix-status.less
+++ b/src/Antix.EASI.Web/Scripts/antix/status/antix-status.less
@@ -2,17 +2,20 @@
 .a-status {
     position: fixed;
     z-index: 1040;
+    max-width: 80%;
+    top: 47px;
+    right: 10%;
+    padding: 5px 30px 5px 15px;
+    border: solid 1px;
+    border-radius: 2px;
+    overflow:auto;
 
-    max-width:80%;
-
-    top: 47px; right: 10%;
-    padding-right: 35px;
-}
-
-.a-status .close{
-    position:absolute;
-    top:7px;
-    right:10px;
+    .close {
+        position: absolute;
+        top: 5px;
+        right: 8px;
+        color: inherit;
+    }
 }
 
 .a-status.ng-hide-add,
@@ -32,3 +35,14 @@
     animation: fadeInDown .5s both ease-in;
 }
 
+.a-status-info {
+    background-color: #66c;
+    color: #eef;
+    border-color: #66c;
+}
+
+.a-status-error {
+    background-color: #c66;
+    color: #fee;
+    border-color: #c66;
+}
