--- a/src/Antix.EASI.Web/client/examiners/list/examiners-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/list/examiners-list-item.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="examiners-list-item" cell-layout-cell>
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">
             <div class="btn-group">
                 <a class="editButton btn btn-default"
@@ -13,7 +13,7 @@
             </h4>
         </div>
         <div class="panel-body">
-            
+
         </div>
     </div>
 
