--- a/src/Antix.EASI.Web/Scripts/antix/status/antix-status.css
+++ b/src/Antix.EASI.Web/Scripts/antix/status/antix-status.css
@@ -1,40 +1,42 @@
-﻿.a-status {
-  position: fixed;
+﻿.a-status-container {
+  position: relative;
+}
+.a-status-container .a-status {
+  position: absolute;
+  top: -5px;
+  right: 5px;
   z-index: 1040;
-  max-width: 80%;
-  top: 47px;
-  right: 10%;
   padding: 5px 30px 5px 15px;
   border: solid 1px;
   border-radius: 2px;
   overflow: auto;
 }
-.a-status .close {
+.a-status-container .a-status .close {
   position: absolute;
   top: 5px;
   right: 8px;
   color: inherit;
 }
-.a-status.ng-hide-add,
-.a-status.ng-hide-remove {
+.a-status-container .a-status.ng-hide-add,
+.a-status-container .a-status.ng-hide-remove {
   display: block !important;
 }
-.a-status.ng-hide-add.ng-hide-add-active,
-.a-status.ng-hide-remove {
+.a-status-container .a-status.ng-hide-add.ng-hide-add-active,
+.a-status-container .a-status.ng-hide-remove {
   -webkit-animation: fadeOutUp 0.25s both ease-in;
   animation: fadeOutUp 0.25s both ease-in;
 }
-.a-status.ng-hide-add,
-.a-status.ng-hide-remove.ng-hide-remove-active {
+.a-status-container .a-status.ng-hide-add,
+.a-status-container .a-status.ng-hide-remove.ng-hide-remove-active {
   -webkit-animation: fadeInDown 0.5s both ease-in;
   animation: fadeInDown 0.5s both ease-in;
 }
-.a-status-info {
-  background-color: #66c;
+.a-status-container .a-status-info {
+  background-color: #369;
   color: #eef;
-  border-color: #66c;
+  border-color: #369;
 }
-.a-status-error {
+.a-status-container .a-status-error {
   background-color: #c66;
   color: #fee;
   border-color: #c66;
