--- a/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="examinations-list-item" cell-layout-cell>
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">
             <div class="btn-group">
                 <a class="editButton btn btn-default"
