--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
@@ -34,27 +34,27 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label">Examiner</label>
-            <div examiners-select
-                 name="examinerId"
-                 ng-model="data.examinerId"></div>
+            <label class="control-label">Patient</label>
+            <div patients-select
+                 name="patient"
+                 ng-model="data.patient"></div>
 
             <div class="errors"
-                 ng-messages="form.examinerId.$error"
-                 ng-if="form.examinerId.$invalid">
-                <div ng-message="exists">please choose an examiner</div>
+                 ng-messages="form.patient.$errors"
+                 ng-if="form.patient.$invalid">
+                <div ng-message="exists">please choose a patient</div>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label">Patient</label>
-            <div patients-select
-                 name="patientId"
-                 ng-model="data.patientId"></div>
+            <label class="control-label">Examiner</label>
+            <div examiners-select
+                 name="examiner"
+                 ng-model="data.examiner"></div>
 
             <div class="errors"
-                 ng-messages="form.patientId.$errors"
-                 ng-if="form.patientId.$invalid">
-                <div ng-message="exists">please choose a patient</div>
+                 ng-messages="form.examiner.$error"
+                 ng-if="form.examiner.$invalid">
+                <div ng-message="exists">please choose an examiner</div>
             </div>
         </div>
         <hr />
