--- a/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
@@ -4,7 +4,7 @@
         Create a new Examiner
     </h3>
 </div>
-<div class="modal-body">
+<form name="form" class="modal-body">
     <div class="form-group">
         <label class="control-label">Name</label>
         <input class="form-control"
@@ -28,16 +28,17 @@
             <div ng-message="not-null">please enter an identifier</div>
         </div>
     </div>
-</div>
-<div class="modal-footer clearfix">
-    <div class="form-group">
+</form>
+<div class="modal-footer">
+    <div class="form-group clearfix">
         <span class="pull-right">
             <a class="btn btn-default"
                ng-click="cancel()">
                 Cancel
             </a>
             <button class="btn btn-primary"
-                    ng-click="create()">
+                    ng-disabled="!data"
+                    ng-click="create(form, data)">
                 Create
             </button>
         </span>
